tests/snapshots/yaml_suite_snapshots__yaml_suite_T5N4_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: "Spec Example 8.7. Literal Scalar [1.3]"
  from: "M9B4, modified for YAML 1.3"
  tags: spec literal scalar whitespace 1.3-mod
  yaml: "--- |\n literal\n ——»text\n↵\n↵\n"
  tree: "+STR\n +DOC ---\n  =VAL |literal\\n\\ttext\\n\n -DOC\n-STR\n"
  json: "\"literal\\n\\ttext\\n\"\n"
  dump: "\"literal\\n\\ttext\\n\"\n"
  emit: "--- |\n  literal\n  —»text\n"
