tests/snapshots/yaml_suite_snapshots__yaml_suite_T833_full.snap
---
source: tests/yaml_suite_snapshots.rs
expression: full
---
- name: Flow mapping missing a separating comma
  from: "@perlpunk"
  tags: error flow mapping
  fail: true
  yaml: "---\n{\n foo: 1\n bar: 2 }\n"
  tree: "+STR\n +DOC ---\n  +MAP\n   =VAL :foo\n"
